Augmentation du seuil du pitch et de la vitesse (2 -> 5) et corrections

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-<!-- 
+<!--
  * Copyright (C) 2017 Eliastik (eliastiksofts.com)
- * 
+ *
  * This file is part of "Denis Brogniart – Ah !".
- * 
+ *
  * "Denis Brogniart – Ah !" is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
- * 
+ *
  * "Denis Brogniart – Ah !" is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public License
  * along with "Denis Brogniart – Ah !".  If not, see <http://www.gnu.org/licenses/>. -->
 <html>
@@ -77,11 +77,11 @@
                                     </div>
                                     <label for="pitchRange"><i class="fa fa-microphone" aria-hidden="true"></i> Pitch (hauteur de la voix) :</label>
                                     <div class="input-group">
-                                         <span class="slider-label left">Grave</span> <input type="text" name="pitchRange" id="pitchRange" data-provide="slider" data-slider-min="0.1" data-slider-max="2" data-slider-step="0.1" data-slider-value="1" data-slider-tooltip="show"> <span class="slider-label right">Aigu</span>
+                                         <span class="slider-label left">Grave</span> <input type="text" name="pitchRange" id="pitchRange" data-provide="slider" data-slider-min="0.1" data-slider-max="5" data-slider-step="0.1" data-slider-value="1" data-slider-tooltip="show" data-slider-ticks="[0.1, 1, 2, 5]" data-slider-ticks-snap-bounds="0.1" ticks_positions="[0.1, 1, 2, 5]"> <span class="slider-label right">Aigu</span>
                                     </div>
                                     <label for="speedRange"><i class="fa fa-forward" aria-hidden="true"></i> Vitesse :</label>
                                     <div class="input-group">
-                                        <span class="slider-label left">Lent</span> <input type="text" name="speedRange" id="speedRange" data-provide="slider" data-slider-min="0.1" data-slider-max="2" data-slider-step="0.1" data-slider-value="1" data-slider-tooltip="show"> <span class="slider-label right">Rapide</span>
+                                        <span class="slider-label left">Lent</span> <input type="text" name="speedRange" id="speedRange" data-provide="slider" data-slider-min="0.1" data-slider-max="5" data-slider-step="0.1" data-slider-value="1" data-slider-tooltip="show" data-slider-ticks="[0.1, 1, 2, 5]" data-slider-ticks-snap-bounds="0.1" ticks_positions="[0.1, 1, 2, 5]"> <span class="slider-label right">Rapide</span>
                                     </div>
                                     <div class="input-group checkbox">
                                         <input type="checkbox" id="checkReverb" /> <label for="checkReverb">Réverbération</label>
