--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                                     <div class="input-group">
                                         <span class="slider-label left">Lent</span> <input type="text" name="speedRange" id="speedRange" data-provide="slider" data-slider-min="0.1" data-slider-max="5" data-slider-step="0.1" data-slider-value="1" data-slider-tooltip="show" data-slider-ticks="[0.1, 1, 2, 5]" data-slider-ticks-snap-bounds="0.1" ticks_positions="[0.1, 1, 2, 5]"> <span class="slider-label right">Rapide</span>
                                     </div>
-                                    <div class="input-group checkbox">
-                                        <input type="checkbox" id="checkReverb" /> <label for="checkReverb">Réverbération</label>
+                                    <div class="input-group checkbox" id="checkReverbGroup">
+                                        <span id="checkReverbWrapper"><input type="checkbox" id="checkReverb" /> <label for="checkReverb">Réverbération</label></span>
                                     </div>
-                                    <div class="input-group checkbox">
-                                        <input type="checkbox" id="checkVocode" /> <label for="checkVocode">Vocoder (voix robotique)</label>
+                                    <div class="input-group checkbox" id="checkVocodeGroup">
+                                        <span id="checkVocodeWrapper"><input type="checkbox" id="checkVocode" /> <label for="checkVocode">Vocoder (voix robotique)</label></span>
                                     </div>
                                     <div class="input-group checkbox">
                                         <input type="checkbox" id="checkCompa" onclick="compaMode();" /> <label for="checkCompa">Mode de compatibilité (cocher si aucun son n'est diffusé)</label><br />
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <p>By <a href="http://www.eliastiksofts.com" target="_blank">Eliastik</a> – <a href="https://github.com/Eliastik/ah" target="_blank">Projet sur Github</a> – <a href="http://www.eliastiksofts.com/ah/downloads/" target="_blank">Télécharger le projet</a> – <a href="README.md" target="_blank">Fichier Lisez-moi</a> – <a href="#" data-toggle="modal" data-target="#compatibility">Voir les navigateurs compatibles</a> – <a href="https://www.youtube.com/watch?v=6oTsleGsWT8" target="_blank">Scène originale en vidéo</a></p>
-            <p class="small">Version 2.1 REV1 – 1/10/2017 – <a href="https://github.com/Eliastik/ah/releases/latest" target="_blank">Journal des changements</a></p>
+            <p class="small">Version 2.2 – 4/10/2017 – <a href="https://github.com/Eliastik/ah/releases/latest" target="_blank">Journal des changements</a></p>
             <p style="display: none; visibility: hidden;">Ceci est un easter egg. Bravo pour l'avoir trouvé ! Il y en a un autre à trouver (dans le fichier main.js). Dédicace à Flamby.</p>
         </div>
         <div id="compatibility" class="modal fade" role="dialog">
@@ -137,7 +137,7 @@
                 </ul>
                 </p>
                 <p>Pour pouvoir utiliser la fonction &laquo; Modifier la voix &raquo;, il vous faut un navigateur relativement récent (les dernières versions des navigateurs ci-dessus sont usuellement compatibles avec cette fonction, sauf Internet Explorer).</p>
-                <p>Il n'est pas encore possible d'enregistrer les voix modifiées avec Firefox ou Edge pour l'instant, à cause d'un <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1031851" target="_blank">bug de ce navigateur</a>.</p>
+                <p>Il n'est pas encore possible d'enregistrer les voix modifiées avec Firefox ou Edge pour l'instant, à cause d'un bug (par exemple <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1031851" target="_blank">sur Firefox</a>).</p>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times fa-fw" aria-hidden="true"></i> Fermer</button>
