--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                                     <div class="input-group">
                                         <span class="slider-label left">Lent</span> <input type="text" name="speedRange" id="speedRange" data-provide="slider" data-slider-min="0.1" data-slider-max="5" data-slider-step="0.1" data-slider-value="1" data-slider-tooltip="show" data-slider-ticks="[0.1, 1, 2, 5]" data-slider-ticks-snap-bounds="0.1" ticks_positions="[0.1, 1, 2, 5]"> <span class="slider-label right">Rapide</span>
                                     </div>
-                                    <div class="input-group checkbox" id="checkReverbGroup">
-                                        <span id="checkReverbWrapper"><input type="checkbox" id="checkReverb" /> <label for="checkReverb">Réverbération</label></span>
+                                    <div class="input-group checkbox disabled" id="checkReverbGroup">
+                                        <span id="checkReverbWrapper"><input type="checkbox" id="checkReverb" disabled="disabled" /> <label for="checkReverb">Réverbération</label></span>
                                     </div>
-                                    <div class="input-group checkbox" id="checkVocodeGroup">
-                                        <span id="checkVocodeWrapper"><input type="checkbox" id="checkVocode" /> <label for="checkVocode">Vocoder (voix robotique)</label></span>
+                                    <div class="input-group checkbox disabled" id="checkVocodeGroup">
+                                        <span id="checkVocodeWrapper"><input type="checkbox" id="checkVocode" disabled="disabled" /> <label for="checkVocode">Vocoder (voix robotique)</label></span>
                                     </div>
                                     <div class="input-group checkbox">
                                         <input type="checkbox" id="checkCompa" onclick="compaMode();" /> <label for="checkCompa">Mode de compatibilité (cocher si aucun son n'est diffusé)</label><br />
