--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
- * Copyright (C) 2017 Eliastik (eliastiksofts.com)
+ * Copyright (C) 2017-2019 Eliastik (eliastiksofts.com)
  *
  * This file is part of "Denis Brogniart – Ah !".
  *
@@ -40,20 +40,29 @@
             </div>
         </nav>
         <div class="container well">
-            <div class="alert alert-info" id="loading"><i class="fa fa-refresh fa-spin fa-fw"></i> <span id="loadingInfo"></span></div>
-            <div class="alert alert-danger" id="errorLoading"><i class="fa fa-times-circle" aria-hidden="true"></i> Une erreur de connexion est survenue lors du chargement des images. Vérifiez votre connexion Internet puis <a href="#" onclick="location.reload();" class="link-contrasted-red">rechargez la page</a>.</div>
+            <noscript><div class="alert alert-danger" id="noJS"><i class="fa fa-times-circle" aria-hidden="true"></i> Javascript est désactivé sur votre navigateur web. Cette application nécessite Javascript pour pouvoir fonctionner. <a href="https://www.enable-javascript.com/fr/" target="_blank">Cliquez ici pour savoir comment activer Javascript</a>.</div></noscript>
+            <div class="alert alert-info" id="loading"><i class="fa fa-refresh fa-spin fa-fw"></i> <span id="loadingInfo">Chargement</span><br /><small id="timeLoadingInfo"></small></div>
+            <div class="alert alert-danger" id="errorLoading"><i class="fa fa-times-circle" aria-hidden="true"></i> Une erreur de connexion est survenue lors du chargement des données graphiques. Vérifiez votre connexion Internet puis <a href="#" onclick="location.reload();" class="link-contrasted-red">rechargez la page</a>.</div>
             <div class="alert alert-warning" id="compa"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> <span id="compaInfo"></span></div>
             <p id="description" class="lead">Le fameux Ah de Denis Brogniart (dans l'émission Koh-Lanta) ! Apparemment, les femmes ne savent pas faire de cabanes. Cliquez autant de fois que vous voulez sur Denis pour qu'il dise Ah, ou faites le répéter en cliquant sur le bouton prévu pour cela. Vous pouvez aussi modifier sa voix !</p>
-            <div class="mb" id="imgAhDiv"><img src="" id="ah_img" /></div>
-            <div class="row"><div class="col-lg-3 col-sm-3 col-md-3"><ul class="list-group"><li class="list-group-item"><i class="fa fa-comment fa-fw" aria-hidden="true"></i> <span class="badge" id="nb_ah">0</span> Ah prononcés</li></ul></div></div>
+            <div class="mb" id="imgAnimationDiv"><img src="" id="animation_img" /></div>
+            <div class="row"><div class="col-lg-3 col-sm-3 col-md-3"><ul class="list-group"><li class="list-group-item"><i class="fa fa-comment fa-fw" aria-hidden="true"></i> <span class="badge" id="nb_play">0</span> Ah prononcés</li></ul></div></div>
             <div class="row">
                 <div class="container-fluid">
                     <form>
+                        <div class="form-inline mb" id="formSoundChoice">
+                            <div class="form-group">
+                                <label for="soundChoice"><i class="fa fa-volume-up" aria-hidden="true"></i> Son :</label>
+                                <select class="form-control" id="soundChoice" disabled="disabled">
+                                    <option value="0">Chargement…</option>
+                                </select>
+                            </div>
+                        </div>
                         <div class="form-group">
-                            <button type="button" class="btn btn-primary" href="#null" onclick="ah_interval();" id="repeat" disabled="disabled"><i class="fa fa-repeat fa-fw" aria-hidden="true"></i> Répéter</button>
-                            <button type="button" class="btn btn-danger" href="#null" onclick="ah_stop();" id="stop" disabled="disabled"><i class="fa fa-stop fa-fw" aria-hidden="true"></i> Stop</button>
+                            <button type="button" class="btn btn-primary" href="#null" onclick="launchPlay_interval();" id="repeat" disabled="disabled"><i class="fa fa-repeat fa-fw" aria-hidden="true"></i> Répéter</button>
+                            <button type="button" class="btn btn-danger" href="#null" onclick="launchPlay_stop();" id="stop" disabled="disabled"><i class="fa fa-stop fa-fw" aria-hidden="true"></i> Stop</button>
                             <div class="disabled-button-wrapper" id="wrapperModify">
-                                <button type="button" class="btn btn-default" href="#null" onclick="ah_modify();" id="modify" disabled="disabled"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i> Modifier la voix</button>
+                                <button type="button" class="btn btn-default" href="#null" onclick="launchPlay_modify();" id="modify" disabled="disabled"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i> Modifier la voix</button>
                             </div>
                         </div>
                         <div class="row">
@@ -103,17 +112,21 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="checkbox disabled" id="checkFullDiv">
-                            <input type="checkbox" id="checkFull" onchange="full()" disabled="disabled" /> <label for="checkFull">Scène entière</label>
+                        <div class="form-group nmb">
+                            <div class="checkbox disabled" id="checkFullDiv" style="display: none;">
+                                <input type="checkbox" id="checkFull" onchange="full()" disabled="disabled" /> <label for="checkFull">Scène entière</label>
+                            </div>
                         </div>
-                        <div class="checkbox disabled" id="checkSoundDiv">
-                            <input type="checkbox" id="checkSound" onchange="stopSound()" disabled="disabled" /> <label for="checkSound">Couper le son</label>
+                        <div class="form-group">
+                            <div class="checkbox disabled" id="checkSoundDiv">
+                                <input type="checkbox" id="checkSound" onchange="stopSound()" disabled="disabled" /> <label for="checkSound">Couper le son</label>
+                            </div>
                         </div>
                     </form>
                 </div>
             </div>
             <p>By <a href="http://www.eliastiksofts.com" target="_blank">Eliastik</a> – <a href="https://github.com/Eliastik/ah" target="_blank">Projet sur Github</a> – <a href="http://www.eliastiksofts.com/ah/downloads/" target="_blank">Télécharger le projet</a> – <a href="README.md" target="_blank">Fichier Lisez-moi</a> – <a href="#" data-toggle="modal" data-target="#compatibility">Voir les navigateurs compatibles</a> – <a href="https://www.youtube.com/watch?v=6oTsleGsWT8" target="_blank">Scène originale en vidéo</a></p>
-            <p class="small">Version 2.2.1 – 15/05/2018 – <a href="https://github.com/Eliastik/ah/releases/latest" target="_blank">Journal des changements</a></p>
+            <p class="small">Version 2.2.2 – 31/03/2019 – <a href="https://github.com/Eliastik/ah/releases/latest" target="_blank">Journal des changements</a></p>
             <p style="display: none; visibility: hidden;">Ceci est un easter egg. Bravo pour l'avoir trouvé ! Il y en a un autre à trouver (dans le fichier main.js). Dédicace à Flamby.</p>
         </div>
         <div id="compatibility" class="modal fade" role="dialog">
