--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             </div>
         </nav>
         <div class="container well">
-            <noscript><div class="alert alert-danger" id="noJS"><i class="fa fa-times-circle fa-fw" aria-hidden="true"></i> Javascript est désactivé sur votre navigateur web. Cette application nécessite Javascript pour pouvoir fonctionner. <a href="https://www.enable-javascript.com/fr/" target="_blank">Cliquez ici pour savoir comment activer Javascript</a>.</div></noscript>
+            <noscript><div class="alert alert-danger" id="noJS"><i class="fa fa-times-circle fa-fw" aria-hidden="true"></i> Javascript est désactivé sur votre navigateur web. Cette application nécessite Javascript pour pouvoir fonctionner. <a href="https://www.enable-javascript.com/fr/" target="_blank" class="alert-link">Cliquez ici pour savoir comment activer Javascript</a>.</div></noscript>
             <div class="alert alert-info" id="loading"><i class="fa fa-refresh fa-spin fa-fw"></i> <span id="loadingInfo">Chargement</span><br /><small id="timeLoadingInfo"></small></div>
-            <div class="alert alert-danger" id="errorLoading"><i class="fa fa-times-circle fa-fw" aria-hidden="true"></i> Une erreur de connexion est survenue lors du chargement de certaines données. Vérifiez votre connexion Internet puis <a href="#" onclick="reloadData();" class="link-contrasted-red">cliquez ici pour tenter de recharger les données</a>, ou <a href="#" onclick="location.reload();" class="link-contrasted-red">rechargez la page</a>.</div>
+            <div class="alert alert-danger" id="errorLoading"><i class="fa fa-times-circle fa-fw" aria-hidden="true"></i> Une erreur de connexion est survenue lors du chargement de certaines données. Vérifiez votre connexion Internet puis <a href="#" onclick="reloadData();" class="alert-link">cliquez ici pour tenter de recharger les données</a>, ou <a href="#" onclick="location.reload();" class="alert-link">rechargez la page</a>.</div>
             <div class="alert alert-warning" id="compa"><i class="fa fa-exclamation-triangle fa-fw" aria-hidden="true"></i> <span id="compaInfo"></span></div>
             <p id="description" class="lead">Le fameux Ah de Denis Brogniart (dans l'émission Koh-Lanta) ! Apparemment, les femmes ne savent pas faire de cabanes. Cliquez autant de fois que vous voulez sur Denis pour qu'il dise Ah, ou faites le répéter en cliquant sur le bouton prévu pour cela. Vous pouvez aussi modifier sa voix !</p>
             <div class="mb" id="imgAnimationDiv"><img src="" id="animation_img" /></div>
@@ -84,6 +84,9 @@
                                     <div class="input-group mb big" id="processingModifLoader">
                                         <i class="fa fa-refresh fa-spin fa-fw"></i> <span class="bold">Traitement en cours… Veuillez patienter.</span>
                                     </div>
+                                    <div class="input-group mb big" id="processingSave">
+                                        <i class="fa fa-refresh fa-spin fa-fw"></i> <span class="bold">Enregistrement en cours… Veuillez patienter. Votre modification sera téléchargée sous peu.</span>
+                                    </div>
                                     <label for="pitchRange"><i class="fa fa-microphone fa-fw" aria-hidden="true"></i> Pitch (hauteur de la voix) :</label>
                                     <div class="input-group">
                                          <span class="slider-label left">Grave</span> <input type="text" name="pitchRange" id="pitchRange" data-provide="slider" data-slider-min="0.1" data-slider-max="5" data-slider-step="0.1" data-slider-value="1" data-slider-tooltip="show" data-slider-ticks="[0.1, 1, 2, 5]" data-slider-ticks-snap-bounds="0.1" ticks_positions="[0.1, 1, 2, 5]"> <span class="slider-label right">Aigu</span>
@@ -103,9 +106,13 @@
                                         <span class="small ml" id="compatAutoDetected">Détecté et activé automatiquement</span>
                                     </div>
                                     <div class="input-group mt">
+                                      <div>
+                                        <button class="btn btn-info" type="button" id="randomInputModify" onclick="randomModify();"><i class="fa fa-random fa-fw" aria-hidden="true"></i> Réglages au hasard</button>
+                                        <button class="btn btn-danger" type="button" id="resetInputModify" onclick="resetModify();"><i class="fa fa-refresh fa-fw" aria-hidden="true"></i> Réinitialiser</button>
+                                      </div>
                                         <button class="btn btn-primary" type="button" id="validInputModify" onclick="validModify(true, false);" disabled="disabled"><i class="fa fa-check fa-fw" aria-hidden="true"></i> Valider</button>
                                         <div class="disabled-button-wrapper" id="wrapperSave">
-                                            <button class="btn btn-default" type="button" id="saveInputModify" onclick="validModify(false, true);" disabled="disabled"><i class="fa fa-save fa-fw" aria-hidden="true"></i> Enregistrer</button>
+                                            <button class="btn btn-default" type="button" id="saveInputModify" onclick="launchSave();" disabled="disabled"><i class="fa fa-save fa-fw" aria-hidden="true"></i> Enregistrer</button>
                                         </div>
                                     </div>
                                 </div>
@@ -147,9 +154,7 @@
                     <li>Internet Explorer 9 et plus (l'animation ne se joue qu'une seule fois, cela est dû à la manière dont ce navigateur gère les fichiers GIF ainsi que son système de mise en cache)</li>
                     <li>Edge (pareil que pour Internet Explorer)</li>
                 </ul>
-                </p>
                 <p>Pour pouvoir utiliser la fonction &laquo; Modifier la voix &raquo;, il vous faut un navigateur relativement récent (les dernières versions des navigateurs ci-dessus sont usuellement compatibles avec cette fonction, sauf Internet Explorer).</p>
-                <p>Il n'est pas encore possible d'enregistrer les voix modifiées avec Firefox ou Edge pour l'instant, à cause d'un bug (par exemple <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1031851" target="_blank">sur Firefox</a>).</p>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times fa-fw" aria-hidden="true"></i> Fermer</button>
@@ -162,6 +167,8 @@
         <script type="text/javascript" src="assets/js/bootstrap-slider.min.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap-native-polyfill.min.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap-native.min.js"></script>
+        <script type="text/javascript" src="assets/js/recorder.js"></script>
+        <script type="text/javascript" src="assets/js/config.js"></script>
         <script type="text/javascript" src="assets/js/main.js"></script>
     </body>
 </html>
