--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                       </div>
                                         <button class="btn btn-primary" type="button" id="validInputModify" onclick="validModify(true, false);" disabled="disabled"><i class="fa fa-check fa-fw" aria-hidden="true"></i> Valider</button>
                                         <div class="disabled-button-wrapper" id="wrapperSave">
-                                            <button class="btn btn-default" type="button" id="saveInputModify" onclick="launchSave();" disabled="disabled"><i class="fa fa-save fa-fw" aria-hidden="true"></i> Enregistrer</button>
+                                            <button class="btn btn-default" type="button" id="saveInputModify" onclick="validModify(false, true);" disabled="disabled"><i class="fa fa-save fa-fw" aria-hidden="true"></i> Enregistrer</button>
                                         </div>
                                     </div>
                                 </div>
