--- a/index.html
+++ b/index.html
@@ -95,13 +95,43 @@
                                     <div class="input-group">
                                         <span class="slider-label left">Lent</span> <input type="text" name="speedRange" id="speedRange" data-provide="slider" data-slider-min="0.1" data-slider-max="5" data-slider-step="0.1" data-slider-value="1" data-slider-tooltip="show" data-slider-ticks="[0.1, 1, 2, 5]" data-slider-ticks-snap-bounds="0.1" ticks_positions="[0.1, 1, 2, 5]"> <span class="slider-label right">Rapide</span>
                                     </div>
-                                    <div class="input-group checkbox disabled" id="checkReverbGroup">
-                                        <span id="checkReverbWrapper"><input type="checkbox" id="checkReverb" disabled="disabled" /> <label for="checkReverb">Réverbération</label></span>
+                                    <div class="row row-filters mt">
+                                        <div class="col-xs-6 border-right">
+                                            <div class="checkbox disabled" id="checkReverbGroup">
+                                                <span id="checkReverbWrapper"><input type="checkbox" id="checkReverb" disabled="disabled" /> <label for="checkReverb">Réverbération</label></span>
+                                            </div>
+                                            <div class="checkbox" id="checkEchoGroup">
+                                                <span id="checkEchoWrapper"><input type="checkbox" id="checkEcho" /> <label for="checkEcho">Écho</label></span>
+                                            </div>
+                                            <div class="checkbox disabled" id="checkVocodeGroup">
+                                                <span id="checkVocodeWrapper"><input type="checkbox" id="checkVocode" disabled="disabled" /> <label for="checkVocode">Vocoder (voix robotique)</label></span>
+                                            </div>
+                                            <div class="checkbox" id="checkPhoneGroup">
+                                                <span id="checkPhoneWrapper"><input type="checkbox" id="checkPhone" /> <label for="checkPhone">Appel téléphonique</label></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <div class="checkbox" id="checkReturnAudioGroup">
+                                                <span id="checkReturnAudioWrapper"><input type="checkbox" id="checkReturnAudio" /> <label for="checkReturnAudio">Retourner l'audio</label></span>
+                                            </div>
+                                            <div class="checkbox" id="checkBitCrusherGroup">
+                                                <span id="checkBitCrusherWrapper"><input type="checkbox" id="checkBitCrusher" /> <label for="checkBitCrusher">Effet 8 bits</label></span>
+                                            </div>
+                                            <div class="checkbox" id="checkBassBoostGroup">
+                                                <span id="checkBassBoostWrapper"><input type="checkbox" id="checkBassBoost" /> <label for="checkBassBoost">Boost des basses</label></span>
+                                            </div>
+                                            <div class="checkbox" id="checkLowpassGroup">
+                                                <span id="checkLowpassWrapper"><input type="checkbox" id="checkLowpass" /> <label for="checkLowpass">Filtre passe-bas</label></span>
+                                            </div>
+                                            <div class="checkbox" id="checkHighpassGroup">
+                                                <span id="checkHighpassWrapper"><input type="checkbox" id="checkHighpass" /> <label for="checkHighpass">Filtre passe-haut</label></span>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="input-group checkbox disabled" id="checkVocodeGroup">
-                                        <span id="checkVocodeWrapper"><input type="checkbox" id="checkVocode" disabled="disabled" /> <label for="checkVocode">Vocoder (voix robotique)</label></span>
+                                    <div class="checkbox">
+                                        <input type="checkbox" id="checkLimiter" checked /> <label for="checkLimiter">Limiteur (réduit la distorsion/saturation, recommandé)</label>
                                     </div>
-                                    <div class="input-group checkbox">
+                                    <div class="checkbox">
                                         <input type="checkbox" id="checkCompa" onclick="compaMode();" /> <label for="checkCompa">Mode de compatibilité (cocher si aucun son n'est diffusé)</label><br />
                                         <span class="small ml" id="compatAutoDetected">Détecté et activé automatiquement</span>
                                     </div>
@@ -132,7 +162,7 @@
                 </div>
             </div>
             <p>By <a href="http://www.eliastiksofts.com" target="_blank">Eliastik</a> – <a href="https://github.com/Eliastik/ah" target="_blank">Projet sur Github</a> – <a href="http://www.eliastiksofts.com/ah/downloads/" target="_blank">Télécharger le projet</a> – <a href="README.md" target="_blank">Fichier Lisez-moi</a> – <a href="#" data-toggle="modal" data-target="#compatibility">Voir les navigateurs compatibles</a> – <a href="https://www.youtube.com/watch?v=6oTsleGsWT8" target="_blank">Scène originale en vidéo</a></p>
-            <p class="small">Version 2.3 – 24/06/2019 – <a href="https://github.com/Eliastik/ah/releases/latest" target="_blank">Journal des changements</a></p>
+            <p class="small">Version 2.4 – 24/07/2019 – <a href="https://github.com/Eliastik/ah/releases/latest" target="_blank">Journal des changements</a></p>
             <p style="display: none; visibility: hidden;">Ceci est un easter egg. Bravo pour l'avoir trouvé ! Il y en a un autre à trouver (dans le fichier main.js). Dédicace à Flamby.</p>
         </div>
         <div id="compatibility" class="modal fade" role="dialog">
@@ -167,6 +197,7 @@
         <script type="text/javascript" src="assets/js/bootstrap-slider.min.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap-native-polyfill.min.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap-native.min.js"></script>
+        <script type="text/javascript" src="assets/js/limiter.js"></script>
         <script type="text/javascript" src="assets/js/recorder.js"></script>
         <script type="text/javascript" src="assets/js/config.js"></script>
         <script type="text/javascript" src="assets/js/main.js"></script>
