--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <link rel="manifest" href="manifest.json">
     </head>
     <body>
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href=""><img src="favicon.ico" alt="Logo"></img> <span class="title-align">Denis Brogniart – Ah !</span></a>
                 </div>
             </div>
         </nav>
-        <div class="container well">
+        <div class="container well" id="containerPrincipal">
             <noscript><div class="alert alert-danger" id="noJS"><i class="fa fa-times-circle fa-fw" aria-hidden="true"></i> Javascript est désactivé sur votre navigateur web. Cette application nécessite Javascript pour pouvoir fonctionner. <a href="https://www.enable-javascript.com/fr/" target="_blank" class="alert-link">Cliquez ici pour savoir comment activer Javascript</a>.</div></noscript>
             <div class="alert alert-info" id="loading"><i class="fa fa-refresh fa-spin fa-fw"></i> <span id="loadingInfo">Chargement</span><br /><small id="timeLoadingInfo"></small></div>
             <div class="alert alert-danger" id="errorLoading"><i class="fa fa-times-circle fa-fw" aria-hidden="true"></i> Une erreur de connexion est survenue lors du chargement de certaines données. Vérifiez votre connexion Internet puis <a href="#" onclick="reloadData();" class="alert-link">cliquez ici pour tenter de recharger les données</a>, ou <a href="#" onclick="location.reload();" class="alert-link">rechargez la page</a>.</div>
@@ -162,7 +162,7 @@
                 </div>
             </div>
             <p>By <a href="http://www.eliastiksofts.com" target="_blank">Eliastik</a> – <a href="https://github.com/Eliastik/ah" target="_blank">Projet sur Github</a> – <a href="http://www.eliastiksofts.com/ah/downloads/" target="_blank">Télécharger le projet</a> – <a href="README.md" target="_blank">Fichier Lisez-moi</a> – <a href="#" data-toggle="modal" data-target="#compatibility">Voir les navigateurs compatibles</a> – <a href="https://www.youtube.com/watch?v=6oTsleGsWT8" target="_blank">Scène originale en vidéo</a></p>
-            <p class="small">Version 2.4 – 24/07/2019 – <a href="https://github.com/Eliastik/ah/releases/latest" target="_blank">Journal des changements</a></p>
+            <p class="small">Version 2.4.1 – 26/07/2019 – <a href="https://github.com/Eliastik/ah/releases/latest" target="_blank">Journal des changements</a></p>
             <p style="display: none; visibility: hidden;">Ceci est un easter egg. Bravo pour l'avoir trouvé ! Il y en a un autre à trouver (dans le fichier main.js). Dédicace à Flamby.</p>
         </div>
         <div id="compatibility" class="modal fade" role="dialog">
