Mise à jour titre

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  * along with "Denis Brogniart – Ah !".  If not, see <http://www.gnu.org/licenses/>. -->
 <html>
     <head>
-        <title>Denis Brogniart – Ah !</title>
+        <title>Boîte à sons Denis Brogniart – Ah !</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <meta name="theme-color" content="#2780e3">
@@ -35,7 +35,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href=""><img src="favicon.ico" alt="Logo"></img> <span class="title-align">Denis Brogniart – Ah !</span></a>
+                    <a class="navbar-brand" href=""><img src="favicon.ico" alt="Logo"></img> <span class="title-align">Boîte à sons Denis Brogniart – Ah !</span></a>
                 </div>
             </div>
         </nav>
